# electron-libreoffice

./: .clangd  .gclient  .gitattributes  .gitignore  LICENSE  PREREQUISITES.md  README.md  TODO.md  Tue Nov 28 2023 17:22:40 GMT-0500 (Eastern Standard Time).docx  Tue Nov 28 2023 17:32:46 GMT-0500 (Eastern Standard Time).docx
.github/: issue_template.md  pull_request_template.md
.github/workflows/: build.yml  build_mac.yml  check-version-tag.yml  clean-mac-runner.yml  clean-win-runner.yml  fetch.yml  generate-sha.yml  manual-release.yml  publish.yml  release.yml  test-generate-sha.yml
ci/: generateSha.js  script.js  updatePackageForRelease.js
eloklldb/: add_dsyms.py  formatters.py  libcxx_chrome_fix.py  lldb.pyi  type_utils.py
eloklldb/lok/: cppu.py  lldb.pyi  rtl.py  strings.py  uno.py
qa/: index.html  index.js  package.json  shell.js  wrapper.js
qa/testing/: README.md  example copy.docx  example_preprocess.json
scripts/: e  fetch-depot-tools.sh  fetch-electron-build-tools.sh  gclient-fix.patch  goma.sh  goma_ctl_fix.patch  local-lok.sh  override-ninja-win-path.patch  prepare-cross-sync-tar.sh  print_script_dir.patch  pull-upstream-changes.sh  shrink-size-git-cache.sh  shrink-size.sh  tar_excludes_base.txt  tar_excludes_os.txt  tar_includes_os.txt  tar_thirdparty_excludes.txt  tar_thirdparty_includes.txt  update-local-lok.sh  write-apply-patch-noop.sh
scripts/cross-sync/: linux.sh  mac-arm.sh  mac.sh  reset-after.sh  win.sh
scripts/toolchain/: LICENSE  PathHelpers.ps1  VisualStudioHelpers.ps1  install.ps1
src/electron/: .clang-format  .gitignore  .prettierrc  BUILD.gn  DEPS  ELECTRON_VERSION  package.json
src/electron/buildflags/: BUILD.gn  buildflags.gni
src/electron/npm/: install.js  libreoffice.d.ts
src/electron/office/: BUILD.gn  LICENSE  async_resolver_scope.cc  async_resolver_scope.h  async_scope.cc  async_scope.h  atomic_bitset.cc  atomic_bitset.h  atomic_bitset_unittest.cc  cancellation_flag.h  destroyed_observer.h  document_client.cc  document_client.h  document_client_unittest.cc  document_event_observer.h  document_holder.cc  document_holder.h  event_bus.cc  event_bus.h  event_bus_unittest.cc  lok_callback.cc  lok_callback.h  lok_callback_unittest.cc  lok_tilebuffer.cc  lok_tilebuffer.h  lok_tilebuffer_unittest.cc  office_client.cc  office_client.h  office_client_unittest.cc  office_instance.cc  office_instance.h  office_instance_unittest.cc  office_keys.cc  office_keys.h  office_load_observer.h  office_singleton.cc  office_singleton.h  office_singleton_unittest.cc  office_web_plugin.cc  office_web_plugin.h  (+15 more)
src/electron/office/js_test/: DocumentClient_as.js  DocumentClient_destructor.js  DocumentClient_loadDocument_invalid.js  DocumentClient_on_off_emit.js  DocumentClient_postUnoCommand.js  DocumentClient_setAuthor.js  OfficeClient_loadDocumentFromArrayBuffer_saveToMemory.js  OfficeClient_setDocumentPassword.js  _globals.d.ts
src/electron/office/plugin_test/: Clipboard.js  Comments.js  DocumentSizeChange.js  Embed_key_events.js  Embed_renderDocument.js  GetLastError.js  NewView.js  OfficeClient_loadDocument_invalid.js  Outline.js  Ready.js  Restorable.js  SaveAs.js  UndoRedo.js  _globals.d.ts
src/electron/office/test/: blink_shims.cc  fake_render_frame.cc  fake_render_frame.h  fake_ui_clipboard.cc  fake_ui_clipboard.h  fake_web_plugin_container.cc  fake_web_plugin_container.h  fake_web_plugin_utils.cc  mocked_paint_image.cc  mocked_scoped_clipboard_writer.cc  mocked_scoped_clipboard_writer_mac.mm  office_test.cc  office_test.h  office_unittest_utils.h  run_all_unittests.cc  run_all_unittests_mac.h  run_all_unittests_mac.mm  simulated_input.cc  simulated_input.h
src/electron/patches/chromium/: .patches  build_disable_partition_alloc_on_mac.patch  cherry-pick-db31a3b7bf33.patch  ignore_mouse_wheel_dcheck.patch
src/electron/script/: download-libreofficekit.py  generate-deps-hash.js
src/electron/script/release/uploaders/: upload.py
src/electron/shell/app/: electron_main_delegate.cc
src/electron/shell/common/gin_converters/: std_converter.h
src/electron/shell/renderer/: electron_render_frame_observer.cc  electron_render_frame_observer.h  electron_renderer_client.cc  electron_renderer_client.h  renderer_client_base.cc  renderer_client_base.h
src/electron/spec/: package.json
src/electron/spec-main/: package.json
